# Scalable

./: CMakeLists.txt  SLIM_intern.cpp  SLIM_intern.h  table_mesh.sh
project/: CMakeLists.txt  SLIM_intern.cpp  SLIM_intern.h  uvToWorld.cpp  uvToWorld.h
src/: SLIM_intern.cpp
